syntax = "proto3";
package calculator;

option go_package = "calculator/calculatorpb";

message SumRequest {
    int32 first_number = 1;
    int32 second_number = 2;
}

message SumResponse{
    int32 sum_result = 1;
}

message MinusReqeust {
    int32 first_number = 1;
    int32 second_number = 2;
}

message MinusResponse {
    int32 sumResult = 1;
}

service CalculatorService{
    rpc Sum(SumRequest) returns (SumResponse){};
    rpc Minus(MinusReqeust) returns (MinusResponse){};
}
